tests/paczka1/fuzzy1/10322452.err
Error in line 4: DhWYfTmz S5 21,3
Error in line 14: gco S974 110,4
Error in line 20: S974 A240 95,5
Error in line 22: S974 S974 74,9
Error in line 18: V9iODj S5 90,3
Error in line 33: S974 S974 80,1
Error in line 37: S974 S5 23,8
Error in line 36: gco S858 13,9
